force-app/main/default/objects/Account_Plan__c/fields/Account_Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Account_Mission_Statement__c</fullName>
    <inlineHelpText>Enter the client’s statement of purpose/mission, which is often found on the company’s “About” web page.</inlineHelpText>
    <label>Account Mission Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>