force-app/main/default/objects/Account_Plan__c/fields/Account_Name_Local_Lang__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Local_Lang__c</fullName>
    <inlineHelpText>Enter the account name in local language.</inlineHelpText>
    <label>Account Name Local Lang</label>
    <length>255</length>
    <type>Text</type>
</CustomField>