force-app/main/default/objects/Account_Plan__c/fields/Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Booking_URL__c</fullName>
    <inlineHelpText>Enter the account&apos;s link to book.</inlineHelpText>
    <label>Booking URL</label>
    <type>Url</type>
</CustomField>