force-app/main/default/objects/Account_Plan__c/fields/Company_Brands_Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>Company_Brands_Subsidiaries__c</fullName>
    <label>Company Brands/Subsidiaries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>