force-app/main/default/objects/Account_Plan__c/fields/Compliance_Regulation__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Regulation__c</fullName>
    <label>Compliance Regulation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>