force-app/main/default/objects/Account_Plan__c/fields/Cost_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Cost_Income_Ratio__c</fullName>
    <label>Cost Income Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>