force-app/main/default/objects/Account_Plan__c/fields/Current_Travel_Structure__c.field-meta.xml
<CustomField>
    <fullName>Current_Travel_Structure__c</fullName>
    <inlineHelpText>Describe how the client manages its travel program (e.g., requirements or travelers’ compliance with the policy). Enter here how the client makes decision about travel and how to influence them.</inlineHelpText>
    <label>Current Travel Structure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>