force-app/main/default/objects/Account_Plan__c/fields/DH_Actual_Roomnights__c.field-meta.xml
<CustomField>
    <fullName>DH_Actual_Roomnights__c</fullName>
    <label>DH Actual Room Nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>