force-app/main/default/objects/Account_Plan__c/fields/DH_Actual_Spend__c.field-meta.xml
<CustomField>
    <fullName>DH_Actual_Spend__c</fullName>
    <label>DH Actual Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>