force-app/main/default/objects/Account_Plan__c/fields/DH_Potential_Spend__c.field-meta.xml
<CustomField>
    <fullName>DH_Potential_Spend__c</fullName>
    <label>DH Potential Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>