force-app/main/default/objects/Account_Plan__c/fields/Estimated_Global_Hotel_Spend_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Global_Hotel_Spend_Per_Year__c</fullName>
    <label>Estimated Global Hotel Spend Per Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>