force-app/main/default/objects/Account_Plan__c/fields/Estimated_MICE_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_MICE_Spend__c</fullName>
    <label>Estimated MICE Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>