force-app/main/default/objects/Account_Plan__c/fields/Estimated_Specialty_Market_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Specialty_Market_Spend__c</fullName>
    <label>Estimated Specialty Market Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>