force-app/main/default/objects/Account_Plan__c/fields/Estimated_Transient_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Transient_Spend__c</fullName>
    <label>Estimated Transient Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>