force-app/main/default/objects/Account_Plan__c/fields/Fiscal_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_Date__c</fullName>
    <label>Fiscal Year End Date</label>
    <type>Date</type>
</CustomField>