force-app/main/default/objects/Account_Plan__c/fields/Important_Changes__c.field-meta.xml
<CustomField>
    <fullName>Important_Changes__c</fullName>
    <label>Important Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>