force-app/main/default/objects/Account_Plan__c/fields/Market_Share_Actual__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Actual__c</fullName>
    <label>Market Share Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>