force-app/main/default/objects/Account_Plan__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <inlineHelpText>Specify external factors or circumstances that could win new business, create a competitive advantage, or benefit Deutsche’s relationship with this account.</inlineHelpText>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>