force-app/main/default/objects/Account_Plan__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>Prefecture</label>
    <type>Address</type>
</CustomField>