force-app/main/default/objects/Account_Plan__c/fields/Profitability_vs_Industry__c.field-meta.xml
<CustomField>
    <fullName>Profitability_vs_Industry__c</fullName>
    <label>Profitability vs Industry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>