force-app/main/default/objects/Account_Plan__c/fields/Region_Client_Interested_in_Booking__c.field-meta.xml
<CustomField>
    <fullName>Region_Client_Interested_in_Booking__c</fullName>
    <inlineHelpText>Allow users to select the Region(s).</inlineHelpText>
    <label>Region Client Interested in Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Region</valueSetName>
    </valueSet>
</CustomField>