force-app/main/default/objects/Account_Plan__c/fields/Strategy_What__c.field-meta.xml
<CustomField>
    <fullName>Strategy_What__c</fullName>
    <label>Strategy - What</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>