force-app/main/default/objects/Account_Plan__c/fields/Strategy_Why__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Why__c</fullName>
    <label>Strategy - Why</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>