force-app/main/default/objects/Account_Plan__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Specify tools or other advantages Deutsche possess that benefit it in doing business with this account.</inlineHelpText>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>