force-app/main/default/objects/Account_Plan__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <inlineHelpText>Specify external factors that could hinder Deutsche’s relationship with this account.</inlineHelpText>
    <label>Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>