force-app/main/default/objects/Account_Plan__c/fields/Total_Account_Roomnights__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Roomnights__c</fullName>
    <label>Total Account Roomnights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>