force-app/main/default/objects/Account_Plan__c/fields/Total_Account_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Account_Spend__c</fullName>
    <label>Total Account Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>