force-app/main/default/objects/Account_Plan__c/fields/Travel_Structure_Advantages__c.field-meta.xml
<CustomField>
    <fullName>Travel_Structure_Advantages__c</fullName>
    <inlineHelpText>Describe the strengths of the client’s approach to managing its travel program, including how Deutsche can leverage the approach to increase revenue.</inlineHelpText>
    <label>Travel Structure Advantages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>