force-app/main/default/objects/Account_Plan__c/fields/Travel_Structure_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Travel_Structure_Challenges__c</fullName>
    <inlineHelpText>Describe the weaknesses of the client’s approach to managing its travel program, including obstacles for Deutsche in increasing revenue.</inlineHelpText>
    <label>Travel Structure Challenges</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>