force-app/main/default/objects/Account_Plan__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Specify internal disadvantages or hindrances that prevents Deutsche from successfully growing the account.</inlineHelpText>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>