force-app/main/default/objects/Account_Plan__c/fields/Year_Growth_on_Employees__c.field-meta.xml
<CustomField>
    <fullName>Year_Growth_on_Employees__c</fullName>
    <label>Year Growth % on Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>